fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ button:focus-visible {
 }
 
 /* width */
-::-webkit-scrollbar {
+::scrollbar {
     width: .5vw;
 }
 
@@ -68,7 +68,7 @@ html {
     scroll-behavior: smooth;
     overflow-x: hidden;
     scrollbar-color: var(--primary-color) var(--black-color);
-    scrollbar-width: normal;
+    scrollbar-width: thin;
 }
 
 @media only screen and (max-width: 75em) {
